--- a/Style.css
+++ b/Style.css
@@ -12,11 +12,15 @@ header {
   width: 100%;
   height: 10vh;
   background-color: #debace;
+  box-shadow: 2px 2px 20px rgb(255, 252, 252);
+
 }
 h1 {
   text-align: center;
-  padding: 6px;
+  padding: 2px;
   font-size: 50px;
+  text-shadow: 2px 2px 20px rgb(70, 70, 70);
+
 }
 main {
   width: 100vw;
